пагинация  menu.html

--- a/templates/fourth_task/menu.html
+++ b/templates/fourth_task/menu.html
@@ -14,6 +14,8 @@
             <li><a href="{% url 'shop' %}">Магазин</a></li>
             <li><a href="{% url 'cart' %}">Корзина</a></li>
             <li><a href="{% url 'sign_up_by_django' %}">Зарегистрироваться</a></li>
+            <li><a href="{% url 'news' %}">Новости</a></li>
+   
         </ul>
     </div>
 
